Fix minor layout issues

--- a/events/static/events/css/raffle.scss
+++ b/events/static/events/css/raffle.scss
@@ -12,6 +12,9 @@
     li {
       margin-left: 3rem;
       font-size: 2rem;
+      p {
+        line-height: 2rem;
+      }
     }
   }
 
@@ -23,6 +26,7 @@
 .raffle-gift-page {
   .current-gift {
     font-size: 2rem;
+    line-height: 2.3rem;
   }
 
   .awarded-ticket {
